[gd_scene load_steps=2 format=4]

[ext_resource type="Script" path="res://KanaLoop/visual_delay.gd" id="1_2f4au"]

[node name="VisualDelay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2f4au")

[node name="PresentationLayer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="FullscreenKana" type="Label" parent="PresentationLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_font_sizes/font_size = 180
horizontal_alignment = 1
vertical_alignment = 1

[node name="FadeOverlay" type="ColorRect" parent="PresentationLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Visual Delay Practice"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Practice recognizing kana after a brief visual delay."
horizontal_alignment = 1

[node name="KanaLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = ""
theme_override_font_sizes/font_size = 120
horizontal_alignment = 1
vertical_alignment = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
text = "Back to Main Menu"
size_flags_horizontal = 3
